# investments-assistant-k8s

./: .env.example  .gitignore  .pre-commit-config.yaml  .tflint.hcl  CODEOWNERS  CODE_OF_CONDUCT  LICENSE  Makefile  README.md  docker-compose.yml  sonar-project.properties
.github/workflows/: build-push.yml  deploy.yml
helm-values/: aws-efs-csi-driver.yaml  aws-load-balancer-controller.yaml
k8s/: README.md  configmap.yaml  external-secrets.yaml  ingress.yaml  namespace.yaml  reports-pvc.yaml  serviceaccount.yaml
k8s/forex/: deployment.yaml  service.yaml
k8s/gateway/: deployment.yaml  hpa.yaml  service.yaml
k8s/llm/: deployment.yaml  pvc.yaml  service.yaml
k8s/market-data/: deployment.yaml  service.yaml
k8s/news/: deployment.yaml  service.yaml
k8s/portfolio/: deployment.yaml  service.yaml
k8s/scheduler/: deployment.yaml  service.yaml
k8s/simulation/: deployment.yaml  service.yaml
opentofu/: .terraform.lock.hcl  README.md  access.tf  backend.tf  cloudfront.tf  compute.tf  data_services.tf  edge.tf  env.tfvars.example  networking.tf  outputs.tf  registry.tf  secrets.tf  variables.tf
scripts/: render_helm_values.py  render_ingress.py
services/: README.md
services/forex/: Dockerfile  README.md  pyproject.toml
services/forex/src/: app.py  config.py
services/forex/src/tools/: forex.py
services/gateway/: Dockerfile  README.md  pyproject.toml
services/gateway/src/: app.py  auth.py  config.py
services/gateway/src/agent/: llm_client.py  orchestrator.py  prompts.py  router.py  tools.py
services/gateway/src/db/: database.py  models.py
services/gateway/src/web/: routes.py
services/gateway/src/web/static/: app.js  index.html  style.css
services/market-data/: Dockerfile  README.md  pyproject.toml
services/market-data/src/: app.py  config.py
services/market-data/src/tools/: market_data.py
services/news/: Dockerfile  README.md  pyproject.toml
services/news/src/: app.py  config.py
services/news/src/db/: models.py
services/news/src/ingestion/: email_reader.py  pipeline.py  sources.py
services/news/src/tools/: news.py  news_memory.py
services/portfolio/: Dockerfile  README.md  pyproject.toml
services/portfolio/src/: app.py  config.py
services/portfolio/src/db/: database.py  models.py
services/portfolio/src/tools/: dispatcher.py  portfolio.py
services/portfolio/src/tools/brokers/: alpaca.py  binance.py  coinbase.py  ibkr.py
services/scheduler/: Dockerfile  README.md  pyproject.toml
services/scheduler/src/: app.py  config.py  jobs.py  reporter.py
services/scheduler/src/db/: database.py  models.py
services/simulation/: Dockerfile  README.md  pyproject.toml
services/simulation/src/: app.py  config.py
services/simulation/src/db/: database.py  models.py
services/simulation/src/tools/: simulator.py
terraform/: .terraform.lock.hcl  README.md  backend.tf  cloudfront.tf  compute.tf  data_services.tf  edge.tf  locals.tf  main.tf  networking.tf  outputs.tf  providers.tf  registry.tf  secrets.tf  terraform.tfvars.example  variables.tf
terraform/modules/acm/: main.tf
terraform/modules/ecr/: main.tf
terraform/modules/eks/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/elasticache/: main.tf
terraform/modules/rds/: README.md  main.tf  outputs.tf
terraform/modules/secrets/: main.tf
terraform/modules/vpc/: main.tf
terraform/modules/waf/: main.tf
