[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "investments-market-data"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.3",
    "yfinance>=0.2.50",
    "ta>=0.11",
    "pandas>=2.2",
    "numpy>=1.26",
    "requests>=2.31",
    "newsapi-python>=0.2.7",
    "feedparser>=6.0",
    "vaderSentiment>=3.3",
]
