[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "investments-news"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "newsapi-python>=0.2.7",
    "feedparser>=6.0",
    "vaderSentiment>=3.3",
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
]
